...
import SwiftUI
import Combine

struct BirdCell: View {
    let bird: Species
    let isFavorite: Bool
    let searchText: String

    @State var cancellable: AnyCancellable?
    @State var image = UIImage(named: "placeholder-headshot")!

    var body: some View {
        VStack {
...
                    let nameMatches = bird.allNameMatches(searchText)
                    ForEach(preferredLanguageOrder, id: \.self) { language in
                        let match = nameMatches[language, default: (nil, nil)]
                        if match.name != nil || match.alternateName != nil {
                            Group {
                                if language == primaryLanguage {
                                    if let alternateName = match.alternateName {
                                        Text(alternateName)
                                            .font(.footnote)
                                    }
                                } else {
                                    Text("\(language): ", comment: "language identifier in list of bird names")
                                        .font(.footnote.italic())
...
