...
                }) {
                    HStack {
                        Text("Filter")
                        Image(systemName: state.selectedFilters.count > 0 ? "line.horizontal.3.decrease.circle.fill" : "line.horizontal.3.decrease.circle")
                    }
                }
                .accessibility(identifier: "filterButton")
            )

            NavigationLink(destination: FilterCriteria(filters: $state.selectedFilters),
                           isActive: $state.showFilters) {
                            Text("*** never shown ***")
            }
...
