/* 
  Localizable.strings
  schweizer-voegel

  Created by Philipp on 27.11.19.
  Copyright © 2019 Philipp. All rights reserved.
*/
"Vögel der Schweiz" = "Birds of Switzerland";
"Suche" = "Search";
"Filter" = "Filter";
"Filterkriterien (%lld)" = "Filtering criteria (%lld species)";
"Keine Filter" = "No filtering";
"Nur häufige Vögel" = "Only common species";
"filterlebensraum" = "Habitat";
"filtervogelguppe" = "Group";
"filternahrung" = "Food";
"filterrotelistech" = "Red List CH";
"filterentwicklungsatlas" = "Evolution";
"Stimme" = "Voice";
"Merkmale" = "Identification criteria";
"Eigenschaften" = "Characteristics";
"Laenge_cm" = "Length (cm)";
"Spannweite_cm" = "Wing span (cm)";
"Gewicht_g" = "Weight (g)";
"Nahrung" = "Food";
"Lebensraum" = "Habitat";
"Zugverhalten" = "Migration behaviour";
"Brutort" = "Nest site";
"Brutdauer_Tage" = "Incubation (days)";
"Jahresbruten" = "Broods per year";
"Gelegegroesse" = "Clutch size";
"Nestlingsdauer_Flugfaehigkeit_Tage" = "Nestling stage / airworthy (days)";
"Hoechstalter_CH" = "Maximum age CH";
"Hoechstalter_EURING" = "Maximum age EURING";
"Status_in_CH" = "Status (in CH)";
"Bestand" = "Population";
"Rote_Liste_CH" = "Red List CH";
"Prioritaetsart_Artenfoerderung" = "Prioritätsart Artenförderung";
